--- a/website/static/css/styles-common.css
+++ b/website/static/css/styles-common.css
@@ -1,3 +1,11 @@
+body {
+	padding: 70px 0 55px 0;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: repeat-x;
+	background-size: cover;
+}
+
 .form_error {
 	color: red;
 }
