MaJ mobile version

--- a/website/static/css/styles-common.css
+++ b/website/static/css/styles-common.css
@@ -59,6 +59,13 @@ h2 {
 	vertical-align: top;
 }
 
+.news-div {
+	padding-bottom: 20px;
+	width: 400px;
+	margin: auto;
+	overflow: hidden;
+}
+
 .news {
 	margin-bottom: 10px;
 	padding: 5px;
