--- a/visualizer/inc/style.css
+++ b/visualizer/inc/style.css
@@ -4,6 +4,7 @@
 }
 
 #main > #display {
+	background-color: #000;
 	/* Thanks to http://www.ForestWander.com for the background image */
 	background-image: url('../resources/background.jpg');
 	background-size: 100% 100%;
